--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@heroicons/react": "^1.0.6",
+    "@uiball/loaders": "^1.2.6",
+    "graphql": "^16.5.0",
+    "lodash": "^4.17.21",
     "next": "latest",
+    "next-auth": "^4.10.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.33.1",
+    "react-hot-toast": "^2.3.0",
+    "react-time-ago": "^7.2.1",
+    "react-timeago": "^7.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
